k8s/elk/elk.yaml
# Derived from ./manifests
---
apiVersion: v1
kind: Namespace
metadata:
  name: logging
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: logging
spec:
  template:
    metadata:
      labels:
        component: elasticsearch
        role: master
      annotations:
        # see https://www.elastic.co/guide/en/elasticsearch/reference/current/vm-max-map-count.html
        # and https://www.elastic.co/guide/en/elasticsearch/reference/current/setup-configuration-memory.html#mlockall
        pod.beta.kubernetes.io/init-containers: '[
          {
          "name": "sysctl",
            "image": "busybox",
            "imagePullPolicy": "IfNotPresent",
            "command": ["sysctl", "-w", "vm.max_map_count=262144"],
            "securityContext": {
              "privileged": true
            }
          }
        ]'
    spec:
      containers:
      - name: elasticsearch
        image: docker.elastic.co/elasticsearch/elasticsearch:5.2.2
        imagePullPolicy: IfNotPresent
        # workarounds until https://github.com/kubernetes/kubernetes/issues/30120
        ports:
        - containerPort: 9200
          name: api
          protocol: TCP
        # - containerPort: 9300
        #   name: transport
        #   protocol: TCP
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 1000m
            memory: 2G
          requests:
            cpu: 1000m
            memory: 1G
        securityContext:
          privileged: true
          capabilities:
            add:
            - IPC_LOCK
            - SYS_RESOURCE
        # FIXME add probes
        volumeMounts:
        - name: config
          mountPath: /usr/share/elasticsearch/config
        - name: data
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: config
        configMap:
          name: elasticsearch
      - name: "data"
        emptyDir:
          medium: ""
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: eventrouter
  namespace: logging
spec:
  # TODO - Set to 2 when ConfigMap locking is merged ~1.7
  # https://github.com/kubernetes/kubernetes/pull/42666
  replicas: 1
  template:
    metadata:
      labels:
        component: eventrouter
    spec:
      containers:
      - name: eventrouter
        # image: gcr.io/heptio-images/eventrouter:v0.1
        image: giantswarm/eventrouter:0.1.2
        imagePullPolicy: IfNotPresent
        volumeMounts:
        - name: config
          mountPath: /etc/eventrouter
      volumes:
      - name: config
        configMap:
          name: eventrouter
---
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: filebeat
  namespace: logging
spec:
  template:
    metadata:
      labels:
        component: filebeat
    spec:
      containers:
      - name: filebeat
        image: giantswarm/filebeat:5.2.2
        imagePullPolicy: IfNotPresent
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
          requests:
            cpu: 100m
        volumeMounts:
        - name: config
          mountPath: /etc/filebeat
          readOnly: true
        - name: hostfs-var-lib-docker-containers
          mountPath: /hostfs/var/lib/docker/containers
          readOnly: true
        - name: hostfs-var-log
          mountPath: /hostfs/var/log
          readOnly: true
      volumes:
      - name: config
        configMap:
          name: filebeat
      - name: hostfs-var-log
        hostPath:
          path: /var/log
      - name: hostfs-var-lib-docker-containers
        hostPath:
          path: /var/lib/docker/containers
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: logging
spec:
  replicas: 1
  template:
    metadata:
      labels:
        component: kibana
    spec:
      containers:
      - name: kibana
        image: kibana:5.2.2
        imagePullPolicy: IfNotPresent
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
          requests:
            cpu: 100m
        ports:
        - containerPort: 5601
          name: ui
          protocol: TCP
        volumeMounts:
        - name: kibana-config
          mountPath: /etc/kibana
          readOnly: true
      volumes:
      - name: kibana-config
        configMap:
          name: kibana-config
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: logging
  labels:
    component: kibana
spec:
  type: ClusterIP
  ports:
  - port: 80
    protocol: TCP
    targetPort: ui
  selector:
    component: kibana
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kube-events
  namespace: logging
  labels:
    app: kube-events
spec:
  template:
    metadata:
      labels:
        app: kube-events
    spec:
      containers:
      - name: kube-events
        image: giantswarm/tiny-tools:0.1.0
        imagePullPolicy: IfNotPresent
        resources:
          # keep request = limit to keep this container in guaranteed class
          limits:
            cpu: 100m
          requests:
            cpu: 100m
        command:
        - fish
        - --command
        - |
          [...]
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: logging
  labels:
    component: elasticsearch
spec:
  type: NodePort
  ports:
  - port: 9200
    protocol: TCP
    targetPort: api
  selector:
    component: elasticsearch
