k8s/elk/elk-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: logging
  name: ingress-logging
  labels:
    app: ingress-logging
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: logging.dev.idiotz.nl
    http:
      paths:
      - backend:
          serviceName: kibana
          servicePort: 80
        path: /*
  tls:
  - hosts:
    - logging.dev.idiotz.nl
    secretName: logging-dev.idiotz.nl-tls
